brat/test/golden/kernel/duplicate_abs.brat.golden
Error in test/golden/kernel/duplicate_abs.brat on line 5:
h2 = { p, p => f(p) }
       ^^^^

  Type error: Variable(s) defined twice: p

